[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/GameOver.gd" type="Script" id=1]
[ext_resource path="res://HUD/font/spaceranger.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 2
outline_color = Color( 0.282353, 0.27451, 0.27451, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="GameOver" type="CanvasLayer"]
offset = Vector2( 0, 430 )
transform = Transform2D( 1, 0, 0, 1, 0, 430 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 125.0
color = Color( 0.105882, 0.00784314, 0.184314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblGameOver" type="Label" parent="ColorRect"]
margin_left = 229.0
margin_top = 15.0
margin_right = 491.0
margin_bottom = 55.0
rect_rotation = -3.0
rect_pivot_offset = Vector2( 131, 20 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Node2D" parent="."]
position = Vector2( 300, 64 )

[node name="LblScore" type="Label" parent="Score"]
margin_right = 90.0
margin_bottom = 31.0
text = "Your score is :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePlayer" type="Label" parent="Score"]
margin_left = 95.0
margin_right = 185.0
margin_bottom = 31.0
text = "000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
margin_left = 335.0
margin_top = 90.0
margin_right = 385.0
margin_bottom = 110.0
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="RetryButton" to="." method="_on_RetryButton_button_up"]
